--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+body {
+  color: #111;
+  font-family: 'Lato', sans-serif;
+  margin: 2em auto;
+  max-width: 768px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header, section {
+  margin-bottom: 4em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  background-color: #222;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  min-width: 190px;
+  padding: 0.875em 2em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover {
+  background-color: #282828;
 }
 
-.App-link {
-  color: #61dafb;
+.location {
+  color: #666;
+  margin-bottom: 2em;
+  max-width: max-content;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.yellow {
+  border-bottom: 2px solid yellow;
+}
+
+.pink {
+  border-bottom: 2px solid pink;
+}
+
+.teal {
+  border-bottom: 2px solid teal;
+}
+
+.lightblue {
+  border-bottom: 2px solid lightblue;
+}
+
+.lightgreen {
+  border-bottom: 2px solid lightgreen;
+}
+
+.orange {
+  border-bottom: 2px solid orange;
 }
